# nbt-reader

./: .gitignore  Cargo.toml  README.md
src/: main.rs  nbt_reader.rs
