[package]
name = "nbt-reader"
version = "1.0.0"
description = "Read and convert NBT files into JSON files"
authors = ["Cbrra"]
license = "MIT"
repository = "https://github.com/cbrra/nbt-reader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
flate2 = "1.0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
